# axion

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  README.md  package.json  plan.md  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: drizzle.config.ts  eslint.config.js  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/api/drizzle/: 0000_initial.sql  0001_sour_goblin_queen.sql  0002_quick_mulholland_black.sql  0003_past_natasha_romanoff.sql  0004_numerous_blonde_phantom.sql  0005_wonderful_warpath.sql  0006_careful_famine.sql  0007_swift_vance_astro.sql  0008_fine_white_tiger.sql  0009_tense_slapstick.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json  (+2 more)
apps/api/evals/: golden-qa.json
apps/api/src/: app.integration.test.ts  app.ts  contradictionPipeline.ts  curiosityPipeline.ts  env.ts  evaluationRunner.ts  experiencePipeline.ts  index.ts  log.ts  observerPipeline.ts  overnightPipeline.ts  pythonClient.ts  researchPipeline.ts  search.ts  synthesisPipeline.ts  visualization.ts
apps/python-worker/: README.md  package.json  pyproject.toml
apps/python-worker/scripts/: ensure-venv.sh
apps/python-worker/src/axion_worker/: __init__.py  extract.py  main.py  settings.py  transcribe.py
apps/python-worker/tests/: test_worker.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
scripts/: demo.sh
(+20 files in other folders)
